# CMakeProjectManager

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  File.h  Include.h  Library.h  MainFrame.h  Project.h
src/: App.cpp  File.cpp  Include.cpp  Library.cpp  MainFrame.cpp  Project.cpp
